# python-node-module

./: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: CHANGE-REQUEST.yml  FEATURE-REQUEST.yml
.reuse/: dep5
cmake/: FindGTlabPython.cmake  FindPythonQt.cmake  GTlab.cmake
examples/Python_Node_Example/: index.json  picture.png.license
examples/Python_Node_Example/project/: intelligraph.gtmod  project.gtlab
examples/Python_Node_Example/project/intelli/: .gtflow.index
examples/Python_Node_Example/project/intelli/Tutorial/: .gtflow.index  {4ee24f7c-cd70-493d-97e7-21b879d119cd}.gtflow  {b1b1445c-faf0-4345-94d2-9be95ac28eb9}.gtflow
src/: CMakeLists.txt  gtpn_module.cpp  gtpn_module.h  gtpn_module.json
src/gui/: gtpn_pythonnodewidget.cpp  gtpn_pythonnodewidget.h  gtpn_pythonscriptdialog.cpp  gtpn_pythonscriptdialog.h
src/nodes/: gtpy_pythonnode.cpp  gtpy_pythonnode.h
src/resources/: pyNodes_resources.qrc
tests/unittests/: CMakeLists.txt  main.cpp
tests/unittests/cmake/: AddGoogleTest.cmake
